Adding my User API's (First Commit)

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 JWT_SECRET_KEY = "my-signin-secretkey"
-SENDGRID_API_KEY = "API Key"
+SENDGRID_API_KEY = "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"
